update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: A-vol-de-velo-b-De-Paris-a-Vienne_70989
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 70989-h/images/cover.jpg
 creator:
   author:
     agent_name: Perrodil, Édouard de
@@ -9,6 +12,8 @@ creator:
     gutenberg_agent_id: '55936'
     url: http://www.gutenberg.org/2009/agents/55936
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/70989#A-vol-de-velo-b-De-Paris-a-Vienne
 gutenberg_issued: '2023-06-16'
 identifiers:
   gutenberg: '70989'
